02-orquestacion/exercises/solution/02-distributed/todo-api-service.yml
# Ejercicio 3 - Aplicación distribuida
# Service ClusterIP para todo-api (acceso interno, expuesto vía Ingress).
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  labels:
    app: todo-api
    exercise: distributed
spec:
  type: ClusterIP
  selector:
    app: todo-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
