02-orquestacion/exercises/solution/02-distributed/todo-front-service.yml
# Ejercicio 3 - Aplicación distribuida
# Service ClusterIP para todo-front (acceso interno, expuesto vía Ingress).
apiVersion: v1
kind: Service
metadata:
  name: todo-front
  labels:
    app: todo-front
    exercise: distributed
spec:
  type: ClusterIP
  selector:
    app: todo-front
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
